--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "axios": "^1.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.1",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
-    "shortid": "^2.2.16",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
